* libltdl/ltdl.h:  formatting change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-04  Gary V. Vaughan  <gvv@techie.com>
+
+	* libltdl/ltdl.h:  formatting change.
+
 2000-12-23  Gary V. Vaughan  <gvv@techie.com>
 
 	From vvv@vsu.ru:
