--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -3140,8 +3140,8 @@ Return @code{NULL} on failure.
 @end deftypefun
   
 Furthermore, in order to save you from having to keep a list of the
-handles of all the modules you have loaded, this function will supply
-the @var{handle} for each loaded module to a given callback:
+handles of all the modules you have loaded, these functions allow you to
+iterate over libltdl's list of loaded modules:
   
 @deftypefun int lt_dlforeach (@w{int (*@var{func}) (lt_dlhandle @var{handle}, lt_ptr @var{data})}, @w{lt_ptr @var{data}})
 For each loaded module call the function @var{func}.  The argument
@@ -3150,6 +3150,13 @@ the @var{data} argument passed to @code{lt_dlforeach}.
 As soon as @var{func} returns a non-zero value for one of the handles,
 @code{lt_dlforeach} will stop calling @var{func} and immediately return 1.
 Otherwise 0 is returned.
+@end deftypefun
+
+@deftypefun lt_dlhandle lt_dlhandle_next (@w{lt_dlhandle place})
+Iterate over the loaded module handles, returning the first handle in the
+list if @var{place} is @code{NULL}, and the next one on subsequent calls.
+If @var{place} is the last element in the list of loaded modules, this
+function returns @code{NULL}.
 @end deftypefun
   
 Of course, you would still need to maintain your own list of loaded
