--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-27  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltconfig.in (ld_shlibs) [aix4*]: Disable on unknown CPU types.
+
 2000-10-30  Aneesh Kumar K.V <kvaneesh@hotmail.com>
 
 	* ltconfig.in (archive_expsym_cmds):  Support for -export-symbol
