--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-27  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libtool.m4 (ld_shlibs) [aix4*]: Disable on unknown CPU types.
+
 2001-01-07  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: Updated.
