--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-28  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libltdl/Makefile.am (CLEANFILES): Clean conditionally-built
+	libraries.
+
 2001-01-27  Alexandre Oliva  <aoliva@redhat.com>
 
 	* libtool.m4 (ld_shlibs) [aix4*]: Disable on unknown CPU types.
