--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-29  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libltdl/Makefile.am (CLEANFILES): Clean conditionally-built
+	libraries.
+
 2001-01-27  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ltcf-c.sh (ld_shlibs) [aix5*]: Disable on unknown CPU types.
