--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Gordon Matzigkeit.  Designed and implemented libtool.
 Alexandre Oliva <oliva@dcc.unicamp.br>.  Co-maintainer.
 Thomas Tanner <tanner@ffii.org>.  Co-maintainer.
 Gary V. Vaughan <gvv@techie.com>.  Co-maintainer.
+Robert Boehne <rboehne@ricardo-us.com>.  Co-maintainer.
