--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-30  Robert Boehne  <rboehne@ricardo-us.com>
+
+	* AUTHORS: added myself to the list of maintainers
+
 2001-01-28  Alexandre Oliva  <aoliva@redhat.com>
 
 	* libltdl/Makefile.am (CLEANFILES): Clean conditionally-built
