--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2001-01-31  Gary V. Vaughan  <gvv@techie.com>
 
+	* TODO:  Updated.
+
 	* libltdl/ltdl.c (load_deplibs): If loading a deplib fails,
 	don't sweat -- it may be a lib that is already statically linked
 	into the loading application.
@@ -12,7 +14,7 @@
 
 2001-01-30  Robert Boehne  <rboehne@ricardo-us.com>
 
-	* AUTHORS: added myself to the list of maintainers
+	* AUTHORS: added myself to the list of maintainers.
 
 2001-01-28  Alexandre Oliva  <aoliva@redhat.com>
 
