--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-02  Robert Boehne  <rboehne@ricardo-us.com>
+
+	* ltconfig.in: Removed a line break that caused sh.test
+	to fail.
+
 2001-01-31  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* AUTHORS: added myself to the list of maintainers.
