--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-02-02  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltdl.m4 (AC_LTDL_SYS_DLOPEN_DEPLIBS): If we know that the host
+	architecture automatically loads deplibs, then...
+	* libltdl/ltdl.c (load_deplibs): ...don't manually load each one.
+
 2001-02-02  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* ltconfig.in: Removed a line break that caused sh.test
