--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-31  Robert Boehne  <rboehne@ricardo-us.com>
+
+        * ltcf-cxx.sh: Eliminated setting LD to $CC
+
 2001-02-05  Gary V. Vaughan  <gvv@techie.com>
 
 	From Nick Hudson <skrll@netbsd.org>
